# Athena

./: .gitignore  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: eval.yml
data/corpus/: metadata.json
data/golden/: baseline_hybrid_reranked.json  questions.json  results_dense_only.json  results_fixed.json  results_hybrid_reranked.json  results_metadata.json  results_parent_child.json  results_recursive.json  results_retriever_bm25.json  results_retriever_dense.json  results_retriever_hybrid.json  results_retriever_hyde.json  results_retriever_multi_query.json  results_semantic.json  results_sliding.json
data/qdrant/: raft_state.json
monitoring/: prometheus.yml
scripts/: benchmark_chunkers.py  benchmark_retrievers.py  build_bm25_index.py  fetch_corpus.py  ingest_corpus.py  run_evaluation.py  run_experiment.py  test_adaptive_rag.py  test_crag.py  test_multi_agent.py  test_pipeline.py  test_planner_executor.py  test_react_agent.py  test_reflection_agent.py  test_reranker.py  test_retrievers.py  test_search.py
src/athena/: core.py
src/athena/agents/: multi_agent.py  planner_executor.py  react_agent.py  reflection_agent.py
src/athena/api/: cache.py  main.py
src/athena/ingestion/chunkers/: fixed.py  metadata_aware.py  parent_child.py  recursive.py  semantic.py  (+1 more)
src/athena/pipelines/: adaptive_rag.py  crag.py  generator.py  rag_pipeline.py
src/athena/reranking/: bge_reranker.py
src/athena/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  hyde_retriever.py  multi_query_retriever.py  qdrant_store.py
(+3 files in other folders)
