[project]
name = "athena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "deepeval>=4.0.6",
    "fastapi>=0.138.0",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "mlflow>=3.14.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
